sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:2: error: ':' expected but ')' found.
def plusPetit(deb){
                 ^AlgSelectionSort:24: error: identifier expected but '}' found.
}
^